# opencatalyst-gardens

./: FairChem_OCP_Garden_Demo.ipynb  OC20_modal_app.py  README.md  hello.py  modal_app.py  pyproject.toml
checkpoint/: __init__.py  manager.py
models/: __init__.py  base.py  dimenet.py  equiformer.py  gemnet.py  painn.py  schnet.py  scn.py
src/: OC20_modal_app.py  OC22_modal_app.py  __init__.py  uma.py
