[project]
name = "opencatalyst-garden"
version = "0.1.0"
description = "Open Catalyst Project model garden"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "ase>=3.24.0",
    "modal>=0.73.21",
    "torch>=2.4.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.32.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
